; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_dw.c_pci_dw_dbi_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_dw.c_pci_dw_dbi_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dw_softc = type { i32, i32* }

@.str = private unnamed_addr constant [23 x i8] c"Unsupported width: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @pci_dw_dbi_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pci_dw_dbi_read(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.pci_dw_softc*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call %struct.pci_dw_softc* @device_get_softc(i32 %9)
  store %struct.pci_dw_softc* %10, %struct.pci_dw_softc** %8, align 8
  %11 = load %struct.pci_dw_softc*, %struct.pci_dw_softc** %8, align 8
  %12 = getelementptr inbounds %struct.pci_dw_softc, %struct.pci_dw_softc* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  %14 = icmp ne i32* %13, null
  %15 = zext i1 %14 to i32
  %16 = call i32 @MPASS(i32 %15)
  %17 = load i32, i32* %7, align 4
  switch i32 %17, label %36 [
    i32 4, label %18
    i32 2, label %24
    i32 1, label %30
  ]

18:                                               ; preds = %3
  %19 = load %struct.pci_dw_softc*, %struct.pci_dw_softc** %8, align 8
  %20 = getelementptr inbounds %struct.pci_dw_softc, %struct.pci_dw_softc* %19, i32 0, i32 1
  %21 = load i32*, i32** %20, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @bus_read_4(i32* %21, i32 %22)
  store i32 %23, i32* %4, align 4
  br label %42

24:                                               ; preds = %3
  %25 = load %struct.pci_dw_softc*, %struct.pci_dw_softc** %8, align 8
  %26 = getelementptr inbounds %struct.pci_dw_softc, %struct.pci_dw_softc* %25, i32 0, i32 1
  %27 = load i32*, i32** %26, align 8
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @bus_read_2(i32* %27, i32 %28)
  store i32 %29, i32* %4, align 4
  br label %42

30:                                               ; preds = %3
  %31 = load %struct.pci_dw_softc*, %struct.pci_dw_softc** %8, align 8
  %32 = getelementptr inbounds %struct.pci_dw_softc, %struct.pci_dw_softc* %31, i32 0, i32 1
  %33 = load i32*, i32** %32, align 8
  %34 = load i32, i32* %6, align 4
  %35 = call i32 @bus_read_1(i32* %33, i32 %34)
  store i32 %35, i32* %4, align 4
  br label %42

36:                                               ; preds = %3
  %37 = load %struct.pci_dw_softc*, %struct.pci_dw_softc** %8, align 8
  %38 = getelementptr inbounds %struct.pci_dw_softc, %struct.pci_dw_softc* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = load i32, i32* %7, align 4
  %41 = call i32 @device_printf(i32 %39, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %40)
  store i32 -1, i32* %4, align 4
  br label %42

42:                                               ; preds = %36, %30, %24, %18
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local %struct.pci_dw_softc* @device_get_softc(i32) #1

declare dso_local i32 @MPASS(i32) #1

declare dso_local i32 @bus_read_4(i32*, i32) #1

declare dso_local i32 @bus_read_2(i32*, i32) #1

declare dso_local i32 @bus_read_1(i32*, i32) #1

declare dso_local i32 @device_printf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
